# metgrs

./: .gitignore  CloudRadar.py  README.md  pyproject.toml
docs/: index.html  metgrs支持的格式说明文档.docx
examples/: 1如何读取风廓线雷达数据.ipynb  2如何读取云雷达数据并绘图.ipynb  3如何读取激光雷达数据并绘图.ipynb  4如何读取微波辐射计数据并绘图.ipynb  扩展1：环境配置与中文字体.ipynb  扩展2：如何读取探空数据绘制TlogP图.ipynb  扩展3：CoudNetPy.ipynb  扩展4：如何安装 msvc 编译器.md  扩展如何读取探空数据绘制TlogP图.ipynb
examples/.virtual_documents/: 1如何读取风廓线雷达数据.ipynb
metgrs/: CloudRadar.py  Lidar.py  MicroWaveRadiometer.py  WindProfileRadar.py  __version__.py
src/: CloudRadar.py  WindProfileRadar.py  __init__.py
